# rzlang

./: .gitignore  Cargo.toml  README.md  TODO.md
rzcalc/: Cargo.toml  history.txt
rzcalc-core/: Cargo.toml
rzcalc-core/src/: builtin.rs  context.rs  error.rs  lib.rs  loc.rs
rzcalc-core/src/eval/: error.rs  evaluate.rs  mod.rs
rzcalc-core/src/lexer/: mod.rs  stream.rs  token.rs
rzcalc-core/src/parser/: error.rs  mod.rs
rzcalc-core/src/types/: callable.rs  error.rs  mod.rs  number.rs  typeid.rs  value.rs
rzcalc-core/tests/: tests_builtin.rs  tests_eval.rs  tests_lexer.rs
rzcalc/src/: main.rs  repl.rs
rzlang/: Cargo.toml
rzlang-core/: Cargo.toml
rzlang-core/src/: builtin.rs  error.rs  loc.rs
rzlang-core/src/eval/: evaluate.rs  mod.rs
rzlang-core/src/lexer/: token.rs
rzlang-core/src/parser/: error.rs  node.rs
rzlang-core/src/types/: iterator.rs  typeid.rs  value.rs
rzlang-core/tests/: tests_builtin.rs  tests_eval.rs
rzlang/src/: highlight.rs  main.rs
src/: context.rs  eval.rs  lib.rs  tests.rs
src/eval/: error.rs  evaluate.rs
src/lexer/: mod.rs  tests.rs
src/parser/: error.rs  mod.rs  node.rs
src/types/: builtin.rs  callable.rs  error.rs  mod.rs  number.rs  typeid.rs  value.rs
tests/: tests_builtin.rs  tests_eval.rs  tests_lexer.rs
