[workspace.package]
version = "0.2.0"
authors = ["rizalachp <rizal.ahmadp@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/RizalAchp/rzcalc"
homepage = "https://github.com/RizalAchp/rzcalc"
readme = "./README.md"


[workspace]
resolver = "2"
members = [
    "rzcalc-core",
    "rzcalc"
] 
