[package]
name = "rzcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline = { version = "0.25.0", features = ["clipboard", "system_clipboard"] }
rzcalc-core   = { path = "../rzcalc-core" }
termion = "2.0.3"
